# Bevy-Game

./: Cargo.toml  README.md  rustfmt.toml
assets/: GAEM.ldtk  GAME.ldtk  GAMEe  GameNew.ldtk  GameTest.ldtk  GameV2.ldtk  GameV3.ldtk  LDTKtest2.ldtk
src/: creature.rs  main.rs  player.rs  world.rs
src/core/: fps_plugin.rs  mod.rs  resources.rs  setup.rs  states.rs
src/core_game/: mod.rs
src/core_game/creature/: animate_creature.rs  apply_creature_state.rs  creature_casts.rs  creature_death.rs  creature_get_damage.rs  creature_movement.rs  creature_reset_color.rs  creature_structs.rs  creature_switch_animation.rs  creature_time_divisions.rs  mod.rs  periodic_spawn.rs  set_creature_state.rs  setup_creature.rs  transfer_data_creature.rs
src/core_game/player/: animate.rs  apply_player_state.rs  audio_test.rs  generate_randomness.rs  get_player_input.rs  mod.rs  move_camera.rs  movement_and_collisions.rs  player_casts.rs  player_deal_damage.rs  player_structs.rs  reset_player_input.rs  screen_shake.rs  set_animation_state.rs  set_attack_state.rs  set_move_state.rs  set_player_state.rs  setup_camera.rs  setup_player.rs  switch_animation.rs  teleport_to_spawn.rs  time_divisions.rs  transfer_data.rs
src/core_game/world/: mod.rs  (+3 more)
src/creature/: apply_creature_state.rs  creature_movement.rs  periodic_spawn.rs  set_creature_state.rs  setup_creature.rs
src/player/: animate.rs  apply_player_state.rs  move_camera.rs  movement_and_collisions.rs  player_deal_damage.rs  setup_player.rs  time_divisions.rs  transfer_data.rs
src/world/: setup_world.rs  spawn_wall_collision.rs
(+15 files in other folders)
