[package]
name = "bevyGame2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
iyes_loopless = "0.7.1"
bevy_rapier2d = "0.18.0"
bevy_ecs_ldtk = "0.4.0"
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3